[gd_scene load_steps=7 format=3 uid="uid://c168kb8g4tb1j"]

[ext_resource type="Script" path="res://players/projectiles/chargeshot_lv_1.gd" id="1_kmh8a"]
[ext_resource type="Texture2D" uid="uid://c14i2tnrsasq1" path="res://assets/sprites/player/projectiles/chargeshot_idea2.png" id="2_e4exx"]
[ext_resource type="AudioStream" uid="uid://de6mcjiqb2m0n" path="res://assets/sounds/hurt_enemy.wav" id="3_t5chd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_inser"]
atlas = ExtResource("2_e4exx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibpir"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_inser")
}],
"loop": true,
"name": &"chargeshot_lv1",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43w6s"]
size = Vector2(10, 10)

[node name="chargeshot_lv1" type="CharacterBody2D"]
z_index = 1
position = Vector2(1.90735e-06, 0)
script = ExtResource("1_kmh8a")
SPEED = 15000.0

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ibpir")
animation = &"chargeshot_lv1"
frame_progress = 0.397225

[node name="collision_monitor" type="Area2D" parent="." groups=["player_projectiles"]]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_monitor"]
position = Vector2(-7.94729e-07, 0)
shape = SubResource("RectangleShape2D_43w6s")

[node name="onscreen" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.166667, 2.38419e-07)
scale = Vector2(0.45, 0.5)

[node name="hurt_enemy_effect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t5chd")
volume_db = -10.0

[connection signal="area_entered" from="collision_monitor" to="." method="_on_collision_monitor_area_entered"]
[connection signal="body_entered" from="collision_monitor" to="." method="_on_collision_monitor_body_entered"]
[connection signal="screen_exited" from="onscreen" to="." method="_on_onscreen_screen_exited"]
[connection signal="finished" from="hurt_enemy_effect" to="." method="_on_hurt_enemy_effect_finished"]
